[package]
name = "strata"
version = "0.1.0"
edition.workspace = true
license = "AGPL-3.0-or-later"
rust-version.workspace = true
description = "Strata — Kaleidoscope's first-party profile storage engine. v0 ships the ProfileStore trait + an InMemoryProfileStore adapter; the Arrow + Parquet + DataFusion + RocksDB + gimli/addr2line columnar adapter lands at v1 behind the same trait. pprof-shaped, per-tenant, by-service and by-profile-type query."
repository = "https://github.com/andrealaforgia/kaleidoscope"
publish = false

[lib]
name = "strata"
path = "src/lib.rs"

[dependencies]
aegis = { path = "../aegis", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }

[[test]]
name = "slice_01_walking_skeleton"
path = "tests/slice_01_walking_skeleton.rs"

[[test]]
name = "slice_02_structured_query"
path = "tests/slice_02_structured_query.rs"

[[test]]
name = "v1_slice_01_wal_durability"
path = "tests/v1_slice_01_wal_durability.rs"

[[test]]
name = "v1_slice_02_snapshot"
path = "tests/v1_slice_02_snapshot.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
