[package]
name = "strata"
version = "0.1.0"
edition.workspace = true
license = "AGPL-3.0-or-later"
rust-version.workspace = true
description = "Strata — Kaleidoscope's first-party profile storage engine. v0 ships the ProfileStore trait + an InMemoryProfileStore adapter; the Arrow + Parquet + DataFusion + RocksDB + gimli/addr2line columnar adapter lands at v1 behind the same trait. pprof-shaped, per-tenant, by-service and by-profile-type query."
repository = "https://github.com/andrealaforgia/kaleidoscope"
publish = false

[lib]
name = "strata"
path = "src/lib.rs"

[dependencies]
aegis = { path = "../aegis", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
# SCAFFOLD: true — store-fsync-durability-v0 DISTILL (Mandate 7).
# The durability seam (FsyncBackend family + atomic_write_snapshot) is
# extracted into wal-recovery (ADR-0060 §4); strata re-exports it. DELIVER
# keeps this edge (strata's `append_wal`/`snapshot` route through it).
wal-recovery = { path = "../wal-recovery", version = "0.1.0" }

# SCAFFOLD: true — out-of-process kill-target for the snapshot-atomicity
# proving test (mechanism (a), ADR-0060 §1/C5). Sets
# CARGO_BIN_EXE_strata-crash-target for the acceptance suite.
[[bin]]
name = "strata-crash-target"
path = "src/bin/strata_crash_target.rs"

[[test]]
name = "slice_01_walking_skeleton"
path = "tests/slice_01_walking_skeleton.rs"

[[test]]
name = "slice_02_structured_query"
path = "tests/slice_02_structured_query.rs"

[[test]]
name = "v1_slice_01_wal_durability"
path = "tests/v1_slice_01_wal_durability.rs"

[[test]]
name = "v1_slice_02_snapshot"
path = "tests/v1_slice_02_snapshot.rs"

# store-fsync-durability-v0 slice 03 (strata). Two-mechanism durability
# proving, RED-ready (#[ignore]d).
[[test]]
name = "v1_slice_03_crash_durability"
path = "tests/v1_slice_03_crash_durability.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
