[package]
name = "trace-query-api"
version = "0.1.0"
edition.workspace = true
# AGPL-3.0-or-later: a long-lived server-side platform component that
# serves the traces read path out of the durable ray store. Same posture
# as query-api, log-query-api, aperture, and the gateway.
license = "AGPL-3.0-or-later"
rust-version.workspace = true
description = "HTTP /api/v1/traces read API serving in-window Spans out of the durable ray store. The read half of the traces pillar; sibling to query-api for metrics and log-query-api for logs."
repository = "https://github.com/andrealaforgia/kaleidoscope"
publish = false

[lib]
name = "trace_query_api"
path = "src/lib.rs"

[[bin]]
name = "trace-query-api"
path = "src/main.rs"

[dependencies]
# The trace-store port + durable adapter this API reads through. The ray
# TraceStore trait is reused UNCHANGED (ADR-0048 Decision 7).
ray = { path = "../ray", version = "0.1.0" }

# Tenant identity vocabulary; the same TenantId the write path persisted
# under.
aegis = { path = "../aegis", version = "0.1.0" }

# The log-store port. The combined /api/v1/traces/with_logs route returns a
# trace together with its correlated logs in ONE response, so the traces
# router now also holds the lumen LogStore the runtime shares into it.
lumen = { path = "../lumen", version = "0.1.0" }

# The log-correlation helper + view shape. `log_query_api::logs_for_trace`
# is the single source of truth for the log filter + lowercase-hex id
# rendering the combined endpoint reuses (no mirrored correlation logic).
# log-query-api depends on trace-query-api ONLY as a dev-dependency (the
# slice_12 correlation test), so this normal edge introduces no lib cycle.
log-query-api = { path = "../log-query-api", version = "0.1.0" }

# Shared read-side HTTP scaffolding (ADR-0054): caps, time-range parser,
# error envelope, fail-closed tenant seam.
query-http-common = { path = "../query-http-common", version = "0.1.0" }

# HTTP server. axum 0.7 (Router + axum::serve(listener, router)) on
# tokio/hyper, identical version specs to crates/log-query-api/Cargo.toml.
# No `regex` (no label matchers), no `tower-http` (no static serving:
# the prism trace UI is deferred, ADR-0048 Decision 3 / FLAG 5).
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "query", "json"] }
hyper = { version = "1.4" }

# Async runtime for the binary's main and the listener.
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "net", "signal"] }

# Response/error serialisation: the bare Span JSON array and the
# {status,error} error envelope.
serde = { workspace = true }
serde_json = { workspace = true }

# Structured startup events on the same tracing stream the gateway uses.
tracing = "0.1"

# No-op decorator attribute crate (`#[mutants::skip]`) for the binary
# entry point, identical posture to log-query-api. Pinned (no wildcard)
# for cargo deny Gate 4.
mutants = "=0.0.4"

[dev-dependencies]
# Drive the Router via tower::ServiceExt::oneshot (no network port bound).
tower = { version = "0.5", features = ["util"] }

# The read-auth acceptance suite (`slice_05_read_auth.rs`,
# read-path-query-api-auth-v0) binds the REAL router on an EPHEMERAL port
# (127.0.0.1:0) and drives a real HTTP GET (window route AND lookup-by-id)
# carrying an `Authorization: Bearer <jwt>` header — the @real-io
# @driving_adapter scenario. `reqwest` is the loopback client;
# `jsonwebtoken` mints the HS256 tokens in-suite. Both already in
# `Cargo.lock`; non-wildcard for cargo deny Gate 4.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
jsonwebtoken = "9"
serde = { workspace = true, features = ["derive"] }

[[test]]
name = "slice_01_traces_read"
path = "tests/slice_01_traces_read.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
